# django-mongodb-example

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
common/: mongodb.py
core/: mongo_db.py  settings.py  urls.py
profiles/: _db.py  models.py  selectors.py  services.py  tests.py  urls.py  views.py
